# glance

./: .clang-format  .gitignore  .roo_rules_architect.md  .roo_rules_ask.md  .roo_rules_code.md  .roo_rules_debug.md  AGENTS.md  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  PROJECT.md  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: GlanceFormat.cmake  GlancePackaging.cmake  GlanceResources.cmake  GlanceTests.cmake  GlanceWebView.cmake
docs/: adding-markdown-flavor.md  codebase-overview.md
resources/: help.md
src/: AboutDialog.cpp  AboutDialog.h  Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  DocumentSettingsDialog.cpp  DocumentSettingsDialog.h  EditorNotebook.cpp  EditorNotebook.h  EmbeddedResources.cpp.in  EmbeddedResources.h  FileTreePanel.cpp  FileTreePanel.h  GlanceApp.cpp  GlanceApp.h  GlanceCtrl.cpp  GlanceCtrl.h  HelpDialog.cpp  HelpDialog.h  MainFrame.cpp  MainFrame.h  MarkdownFlavor.cpp  MarkdownFlavor.h  MarkdownRenderer.cpp  MarkdownRenderer.h  MarkdownValidator.cpp  MarkdownValidator.h  PreviewPanel.cpp  PreviewPanel.h  ResourcePaths.cpp  ResourcePaths.h  SettingsManager.cpp  SettingsManager.h  main.cpp
tests/: core_tests.cpp
